Issue #146 Make the appstore repo configurable by env var and sysprop

--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -25,7 +25,7 @@
     <!-- Dynamic Form Population -->
     <script language="JavaScript">
     $(document).ready(function() {
-      var appstoreURL = "https://raw.githubusercontent.com/ALRubinger/appstore/master/appstore.json";
+      var appstoreURL = "/api/appstore/applications";
       console.log("Obtaining app store metadata from: " + appstoreURL);
 
       var DATA_ATTR_NAME_GIT_URL = "data-gitUrl";
