Catapult is now missioncontrol

--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -70,7 +70,7 @@
   </div><!--/.row-->
   <div class="row">
     <div class="col-sm-5 col-md-6 col-lg-7 details">
-      <form id="flingForm" enctype="multipart/form-data" action="api/catapult/upload" method="post"
+      <form id="flingForm" enctype="multipart/form-data" action="api/missioncontrol/upload" method="post"
             role="form">
         <div class="form-group has-success has-feedback">
           <label for="file">QuickStart ZIP file</label>
