Update index.html title

--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Red Hat Catapult</title>
+  <title>openshift.io Launchpad Mission Control</title>
 
   <!-- PatternFly Styles -->
   <link rel="stylesheet" href="bower_components/patternfly/dist/css/patternfly.min.css">
