--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -80,7 +80,7 @@
         </div>
         <div class="form-group">
           <div class="col-xs-4 col-sm-4 col-md-4 submit">
-            <button id="flingSubmitButton" type="submit" class="btn btn-primary btn-lg">Fling!</button>
+            <button id="flingSubmitButton" type="submit" class="btn btn-primary btn-lg">Launch!</button>
           </div>
         </div>
       </form>
